--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ html {
 
 
     --color-white: #fff;
-    --color-light:#f4f4f4;
+    --color-light: #f4f4f4;
     --color-black: #000f37;
     --color-dark: #575757;
 
@@ -75,10 +75,10 @@ body {
     font-size: var(--fs-body);
     color: var(--color-black);
 }
+
 p {
     font-size: var(--fs-body);
     font-weight: var(--fw-light);
-    text-align: center;
     margin: auto;
 }
 
@@ -86,17 +86,21 @@ p {
 .lead {
     width: 63%;
     font-size: 1.1rem;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.5;
     margin: 1.5rem auto 3rem;
+    text-align: center;
 }
+
 a {
     color: var(--clr-white);
     font-weight: 300;
 }
+
 img {
     width: 100%;
 }
+
 .btn {
     display: inline-block;
     padding: 1rem 2.3rem;
@@ -114,12 +118,14 @@ img {
     border: 1px solid transparent;
     transition: var(--transition);
 }
+
 .btn-primary:hover,
 .btn:hover {
     background-color: var(--color-white);
     color: var(--color-black);
     border-color: var(--color-black);
 }
+
 .avatar {
     width: 2.2rem;
     height: 2.2rem;
@@ -127,6 +133,7 @@ img {
     border-radius: 50%;
     overflow: hidden;
 }
+
 section {
     max-width: 100vw;
     padding-bottom: var(--section-padding-bottom);
@@ -153,21 +160,25 @@ nav {
     z-index: 2;
     background-color: var(--clr-primary-bg);
 }
+
 .nav__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* background-color: var(--clr-primary-bg); */
 }
+
 nav button {
     display: none;
 }
+
 /* The above code is to hide the buttons to be used in the mobile design */
 .links {
     display: flex;
     align-items: center;
     gap: 3rem;
 }
+
 .nav__logo {
     font-size: 2rem;
     font-weight: bold;
@@ -176,6 +187,7 @@ nav button {
     left: 50%;
     transform: translate(-50%, -50%); */
 }
+
 .nav__signin-signup {
     display: flex;
     gap: 3rem;
@@ -190,17 +202,20 @@ header {
     min-height: 790px;
     padding-top: 5rem;
 }
+
 .heading {
     font-size: var(--fs-primary-headers);
     font-weight: var(--fw-bold);
     text-align: center;
     color: inherit;
 }
+
 .header__img {
     margin-top: -25%;
     max-width: 1000px;
     margin-inline: auto;
 }
+
 /* floating line */
 .header__floating-line {
     position: absolute;
@@ -208,6 +223,7 @@ header {
     right: 0rem;
     z-index: -1;
 }
+
 /* scroll down arrow */
 a.scrolldown-arrow img {
     width: 10vw;
@@ -215,6 +231,7 @@ a.scrolldown-arrow img {
     right: 3rem;
     top: 57rem;
 }
+
 /* download buttons */
 .to-download {
     width: 47rem;
@@ -223,10 +240,12 @@ a.scrolldown-arrow img {
     justify-content: center;
     margin-top: 1rem;
 }
+
 .to-download img {
     width: 20rem;
     cursor: pointer
 }
+
 /* about section */
 .about__container .heading {
     margin-bottom: 20rem;
@@ -237,6 +256,7 @@ article.section__content-container {
     grid-template-columns: 1fr 1fr;
     gap: 4rem;
 }
+
 .section__content-container div.image {
     background-image: url('images/Rectangle\ 709.svg');
     background-repeat: no-repeat;
@@ -244,6 +264,7 @@ article.section__content-container {
     /* The width here is to minify the size of the rectangle imported
     so that the next component to it can be displayed well .  */
 }
+
 .section__content-container div.image img {
     width: 1071px;
     height: 1060px;
@@ -253,9 +274,11 @@ article.section__content-container {
     /* This is the actual height of the image , you can get it by hovering
     over the image source in the browser.  */
 }
-.flow * + * {
+
+.flow *+* {
     margin-top: 35px;
 }
+
 .description {
     margin-top: -5rem;
     /* The margin-top is to pull the box a bit to top */
@@ -266,16 +289,20 @@ article.section__content-container {
     big that the image is covering the button --altough this is not
     appearing visually ). */
 }
+
 .description__heading {
     font-size: var(--fs-secondary-headers);
     font-weight: var(--fw-semi-bold);
 }
+
 .description p {
     color: var(--color-dark);
 }
+
 .reverse-order {
     order: 2
 }
+
 /* clients */
 .clients__images {
     /* background-color: #eee; */
@@ -286,7 +313,8 @@ article.section__content-container {
     border-radius: 5rem;
     width: 100%;
 }
-.clients__images div.img-container{
+
+.clients__images div.img-container {
     background-color: white;
     padding: 1rem;
     border-radius: 2rem;
@@ -297,14 +325,146 @@ article.section__content-container {
     align-items: center;
     box-shadow: 5px 5px 25px 8px #9f9e9e;
 }
+
 .clients__images div.img-container:first-child img {
     width: 200px;
     height: 85px;
 }
+
 .clients__images div.img-container:first-child {
     margin-top: 2.5rem;
 }
+
 .clients__container p {
     width: 60%;
 }
 
+/* testimonials section */
+.testimonials__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem 0.5rem;
+    --testimonial-bg: #FAFAFA;
+}
+
+.testimonials__container article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: var(--testimonial-bg);
+    width: 580px;
+    height: 270px;
+    aspect-ratio: 1 / 0.2;
+    border-radius: 2rem;
+    padding: 1rem 3rem;
+}
+
+.testimonial {
+    color: #5F7285;
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 500;
+
+}
+
+
+.user {
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-start;
+}
+
+.user__img {
+    font-size: 25px;
+    border-radius: 50%;
+    padding: 0.5rem;
+    background: white;
+}
+
+.user-info {
+    margin-top: 0.3rem;
+}
+
+.username {
+    color: #1B263D;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    margin-bottom: 0.2rem;
+}
+
+.user-job {
+    color: #9C9EA3;
+    font-size: 12px;
+    font-weight: 400;
+}
+.testimonial__floating-line {
+    position: absolute;
+    top: 336.5rem;
+    left: 59%;
+    z-index: -1;
+}
+/* FAQ's */
+.faqs__container {
+    width: 50%;
+}
+.question {
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: #E7EBEE;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.question-title {
+    display: flex;
+    gap: 5rem;
+    padding-left: 5rem;
+}
+.question-title__text {
+    margin-top: 0;
+}
+.question-btn {
+    font-size: 25px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+.minus-icon {
+    display: none;
+}
+.question p {
+    display: none;
+}
+.question.active {
+    background-color: #fff;
+    box-shadow: 5px 5px 20px 5px #acacac;
+    flex-wrap: wrap;
+}
+.question.active .plus-icon {
+    display: none;
+}
+.question.active .minus-icon {
+    display: block;
+    color: #FD5757;
+    margin-top: 0rem;
+    /* I found that the element had a margin-top that disrupted the design */
+}
+.question.active p {
+    display: block;
+    margin-left: 26.5%;
+}
+/* A good approach from wes bos : He said in the video of fixed nav that
+on toggling css classes using js , he likes to add the class on the parent
+element so that he can manipulate that element's children . 
+
+So here instead of adding the active class on just the paragraph that
+we will hide , I will add it to the question container so that I can
+do the changes required to every element in the question container . */
+.question__body {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-between;
+    align-items: center;
+}
