--- a/main.css
+++ b/main.css
@@ -161,7 +161,7 @@ nav {
     parent -- the nav . */
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 9;
     background-color: var(--clr-primary-bg);
 }
 
@@ -248,6 +248,15 @@ a.scrolldown-arrow img {
 .to-download img {
     width: 20rem;
     cursor: pointer
+}
+.socials {
+    position: absolute;
+    left: 3rem;
+    top: 45rem;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* about section */
@@ -557,4 +566,37 @@ footer  * {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 2rem;
+}
+footer input[type='email'] {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    outline: none;
+    border: none;
+    background-color: var(--color-light);
+}
+footer input:focus {
+    outline: none;
+}
+footer button[type='submit'] {
+    border: 1px solid var(--color-black);
+    background-color: white;
+    outline: none;
+    padding: 0.5rem 0.8rem;
+    margin-left: 0.5rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+}
+footer .title {
+    margin-bottom: 2rem;
+    font-weight: 500;
+}
+.list li {
+    margin-top: 1rem;
+}
+/* copyright */
+.copyright__container {
+    background-color: var(--color-black);
+    color: var(--clr-white);
+    padding: 2rem;
+    text-align: center;
 }
