modified the FAQ section

--- a/main.css
+++ b/main.css
@@ -437,6 +437,7 @@ article.section__content-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 .question-title {
     display: flex;
