--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ body {
     font-family: 'Inter', sans-serif;
     font-size: var(--fs-body);
     color: var(--color-black);
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     /* The above property is important because the floating line
     creates an extra space (unnecessarily) on the x-axis */
 }
@@ -204,7 +204,7 @@ header {
     background-color: var(--clr-primary-bg);
     color: var(--clr-white);
     min-height: 790px;
-    padding-top: 5rem;
+    padding-top: 10rem;
 }
 
 .heading {
@@ -215,7 +215,7 @@ header {
 }
 
 .header__img {
-    margin-top: -25%;
+    margin-top: -20%;
     max-width: 1000px;
     margin-inline: auto;
 }
@@ -249,10 +249,11 @@ a.scrolldown-arrow img {
     width: 20rem;
     cursor: pointer
 }
+
 .socials {
     position: absolute;
     left: 3rem;
-    top: 45rem;
+    top: 35rem;
     display: flex;
     gap: 1rem;
     flex-direction: column;
@@ -375,10 +376,11 @@ article.section__content-container {
     border: 1px solid transparent;
     transition: var(--transition);
 }
+
 .testimonials__container article:hover {
     background-color: var(--clr-white);
     border-color: var(--color-black);
-    box-shadow: 5px 5px 20px 10px rgba(0,0,0,0.1);
+    box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.1);
 }
 
 .testimonial {
@@ -420,16 +422,19 @@ article.section__content-container {
     font-size: 12px;
     font-weight: 400;
 }
+
 .testimonial__floating-line {
     position: absolute;
     top: 336.5rem;
     left: 59%;
     z-index: -1;
 }
+
 /* FAQ's */
 .faqs__container {
     width: 50%;
 }
+
 .question {
     padding: 1rem;
     border-radius: 1rem;
@@ -438,45 +443,61 @@ article.section__content-container {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    border: 2px solid transparent;
+    transition: var(--transition);
 }
+
+.question:hover {
+    border-color: var(--clr-primary-bg);
+}
+
 .question-title {
     display: flex;
     gap: 5rem;
     padding-left: 5rem;
 }
+
 .question-title__text {
     margin-top: 0;
 }
+
 .question-btn {
     font-size: 25px;
     cursor: pointer;
     border: none;
     background-color: transparent;
 }
+
 .minus-icon {
     display: none;
 }
+
 .question p {
     display: none;
 }
+
 .question.active {
     background-color: #fff;
     box-shadow: 5px 5px 20px 5px #acacac;
     flex-wrap: wrap;
 }
+
 .question.active .plus-icon {
     display: none;
 }
+
 .question.active .minus-icon {
     display: block;
     color: #FD5757;
     margin-top: 0rem;
     /* I found that the element had a margin-top that disrupted the design */
 }
+
 .question.active p {
     display: block;
     margin-left: 24%;
 }
+
 /* A good approach from wes bos : He said in the video of fixed nav that
 on toggling css classes using js , he likes to add the class on the parent
 element so that he can manipulate that element's children . 
@@ -502,20 +523,24 @@ do the changes required to every element in the question container . */
     /* This padding-bottom here is to override the given bottom padding
     by the general container class .  */
 }
+
 .download__container__image {
     width: 1071px;
     height: 1061px;
     position: relative;
     margin-left: -35%;
     margin-top: -22%;
-} 
+}
+
 .download__container .heading {
     padding-left: 10rem;
     text-align: left;
 }
+
 .download__container .to-download {
     justify-content: center;
 }
+
 /* subscription container */
 .subscription__container {
     background-color: var(--clr-primary-bg);
@@ -525,11 +550,13 @@ do the changes required to every element in the question container . */
     display: grid;
     grid-template-columns: 60% 40%;
 }
+
 .subscription__container .heading {
     font-size: var(--fs-secondary-headers);
     text-align: left;
     margin-bottom: 2rem;
 }
+
 .subscription__container .btn-primary {
     width: 220px;
     height: 70px;
@@ -542,32 +569,43 @@ do the changes required to every element in the question container . */
     border: 1px solid var(--color-white);
     transition: var(--transition);
 }
+
 .subscription__container .btn-primary a {
     color: inherit;
 }
+
 .subscription__container .btn-primary:hover {
     background-color: var(--clr-white);
     color: var(--color-black);
     border-color: var(--color-black);
 }
+
 /* footer */
 footer {
     color: var(--color-black);
 }
-footer  * {
+
+footer * {
     color: inherit;
 }
+
 .footer__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 5rem;
 }
+
 .footer__part-one,
 .footer__part-two {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 2rem;
 }
+
+.footer__part-one__form p {
+    line-height: 1.5;
+}
+
 footer input[type='email'] {
     padding: 0.5rem;
     border-radius: 0.5rem;
@@ -575,9 +613,11 @@ footer input[type='email'] {
     border: none;
     background-color: var(--color-light);
 }
+
 footer input:focus {
     outline: none;
 }
+
 footer button[type='submit'] {
     border: 1px solid var(--color-black);
     background-color: white;
@@ -587,17 +627,165 @@ footer button[type='submit'] {
     cursor: pointer;
     border-radius: 0.5rem;
 }
+
 footer .title {
     margin-bottom: 2rem;
     font-weight: 500;
 }
+
 .list li {
     margin-top: 1rem;
 }
+
 /* copyright */
 .copyright__container {
     background-color: var(--color-black);
     color: var(--clr-white);
     padding: 2rem;
     text-align: center;
+}
+
+/* media queries for (Tablets) */
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-width-tablet);
+    }
+
+    h1 {
+        font-size: 4.2rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.9rem;
+    }
+
+    .lead {
+        width: 72%;
+        margin-bottom: 3rem;
+    }
+
+    section {
+        padding-bottom: var(--section-padding-bottom-mobile);
+    }
+
+    /* navbar */
+    ul.links {
+        position: fixed;
+        right: 2rem;
+        top: 6rem;
+        gap: 0;
+        min-width: 15rem;
+        width: max-content;
+        height: max-content;
+        background-color: white;
+        box-shadow: -2rem 2rem 10px rgba(0, 0, 0, 0.1);
+        flex-direction: column;
+    }
+
+    ul.links li {
+        width: 100%;
+        padding: 2rem;
+        transition: var(--transition);
+        text-align: center;
+        cursor: pointer;
+    }
+
+    ul.links li:hover {
+        color: var(--clr-white);
+        background-color: var(--clr-primary-bg);
+    }
+
+    ul.links li a {
+        color: var(--color-black);
+    }
+
+    ul.links li:hover a {
+        color: var(--color-white);
+    }
+
+    .nav__signin-signup {
+        display: none;
+    }
+
+    nav button {
+        background-color: transparent;
+        outline: none;
+        font-size: 25px;
+        border: none;
+        color: var(--clr-white);
+        cursor: pointer;
+    }
+
+    .active {
+        display: block;
+    }
+
+    .hide {
+        display: none;
+    }
+
+    /* header */
+    header {
+        padding-bottom: var(--section-padding-bottom-mobile);
+    }
+
+    .header__img {
+        display: none;
+    }
+
+    header ~ .to-download {
+        /* At first , I used the adjacent sibling combinator (+),
+        but it didn't work because it works only on adjacent siblings,
+        so the selector to use here is the general sibling combinator */
+        margin-top: -6rem;
+    }
+
+    /* about */
+    .about {
+        margin-top: 2rem;
+    }
+
+    .section__content-container div.image img {
+        margin-left: -55%;
+        margin-top: -65%;
+    }
+
+    /* testimonials */
+    .testimonials__container {
+        grid-template-columns: 1fr;
+    }
+
+    .testimonials__container article {
+        margin-inline: auto;
+    }
+
+    /* download container */
+    .download__container {
+        margin-left: 0;
+        position: relative;
+    }
+
+    .download__container__image {
+        position: absolute;
+        left: 58%;
+        min-width: 8rem;
+        max-width: 600px;
+        transform: translate(45%, 5%);
+    }
+
+    /* subscription-container */
+    .subscription__container .btn-primary {
+        margin-top: 5rem;
+    }
+
+    /* footer */
+    .footer__container {
+        grid-template-columns: 1fr;
+        row-gap: 2rem;
+        text-align: center;
+    }
 }
