--- a/main.css
+++ b/main.css
@@ -737,7 +737,7 @@ footer .title {
         display: none;
     }
 
-    header ~ .to-download {
+    header~.to-download {
         /* At first , I used the adjacent sibling combinator (+),
         but it didn't work because it works only on adjacent siblings,
         so the selector to use here is the general sibling combinator */
@@ -747,6 +747,10 @@ footer .title {
     /* about */
     .about {
         margin-top: 2rem;
+    }
+
+    article.section__content-container {
+        gap: 1rem;
     }
 
     .section__content-container div.image img {
@@ -787,5 +791,121 @@ footer .title {
         grid-template-columns: 1fr;
         row-gap: 2rem;
         text-align: center;
+    }
+}
+
+/* media queries for (phones) */
+@media screen and (max-width: 600px) {
+    html {
+        font-size: 14px;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+    }
+
+    .lead {
+        width: var(--container-width-phone)
+    }
+
+    article.section__content-container {
+        grid-template-columns: 1fr;
+        row-gap: 6rem;
+    }
+
+    header~.to-download {
+        flex-direction: column;
+        justify-content: center;
+        margin-inline: auto;
+        width: fit-content;
+        margin-top: -12rem;
+    }
+
+    .to-download a {
+        height: 7rem;
+    }
+
+    .socials {
+        display: none;
+    }
+
+    /* about */
+    .about__container .heading {margin-bottom: 0;}
+    .about__container div.image {
+        margin-top: 15rem;
+    }
+
+    .about__container div.image img {
+        max-width: 70rem;
+    }
+    .section__content-container div.image img {
+        margin-left: -45%;
+    }
+
+    .about__container .description {
+        /* margin-bottom: 10rem; */
+        text-align: center;
+    }
+    .reverse-order {grid-row: 1;}
+
+    /* .reverse-order+.description {
+        order: 2;
+    } */
+    /* This is to reset the reverse order effect as it doesn't appear
+    on mobile phones.  
+    Update: Using the grid row is much better than reseting the description
+    to get the right ordering . */
+
+    /* testimonials */
+    .testimonials__container article {
+        max-width: 85%;
+        margin: 0;
+    }
+
+    /* to download */
+    .download__container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        margin-left: -2rem;
+    }
+    .download__container__image {
+        left: -5rem;
+        top: 25rem;
+    }
+    .download__container .lead {
+        max-width: 70%;
+        margin-inline: auto;
+        margin-left: 5rem;
+    }
+
+    /* subscription container */
+    .subscription__container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 2;
+        position: relative;
+        /* - The position relative is important so that I can use the
+        z-index . 
+        - The z-index is important because the div of the above image
+        covers this container , so I can't deal with the btn . And this
+        is a problem in the assets of this project .  */
+    }
+    .subscription__container .info,
+    .subscription__container .heading {
+        text-align: center;
+    }
+    .subscription__container .btn-primary {
+        margin-inline: auto;
     }
 }
